# Syntrix

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PRD.md  PROGRESS.md  README.md  syntrix-layers.drawio
.claude/: settings.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  0002_auth_tables.py  0003_community_tables.py  01ee0804de6a_add_search_vector_and_duplicate_of_to_.py  10adf492c474_add_comments_table.py  3b067ab94f01_add_posts_and_post_attachments.py  55327d4afc2d_add_private_rooms_dms_chat_room_members_.py  84b1624e0064_add_chat_rooms_and_chat_messages.py  d49e5736632d_add_vote_tables.py  e7a1b2c3d4e5_add_qa_post_type_and_answers.py  f8b2c4d6e7a9_add_reputation_and_badges.py
backend/app/: config.py  main.py  redis.py
backend/app/answers/: router.py  schemas.py
backend/app/auth/: deps.py  jwt.py  oauth.py  perm.py  rate_limit.py  router.py
backend/app/auth/tests/: test_auth_flow.py  test_jwt.py  test_rate_limit.py
backend/app/chat/: router.py  schemas.py
backend/app/chat/tests/: test_chat.py
backend/app/comments/: router.py  schemas.py  tree.py
backend/app/comments/tests/: test_tree.py
backend/app/communities/: router.py  schemas.py
backend/app/communities/tests/: test_communities.py
backend/app/db/: __init__.py  base.py  engine.py  session.py
backend/app/db/tests/: test_alembic_safety_belt.py  test_engine.py
backend/app/feeds/: algorithms.py  router.py
backend/app/invites/: router.py  schemas.py
backend/app/invites/tests/: conftest.py  test_invites.py
backend/app/models/: __init__.py  answer.py  chat.py  chat_member.py  comment.py  community.py  invite.py  oauth_identity.py  post.py  rate_limit.py  refresh_token.py  reputation.py  tag.py  user.py  vote.py
backend/app/posts/: og.py  renderer.py  router.py  schemas.py
backend/app/posts/tests/: test_posts_duplicate.py  test_renderer.py
backend/app/profiles/: router.py  schemas.py
backend/app/profiles/tests/: test_profiles.py
backend/app/reputation/: badges.py  engine.py  router.py  schemas.py
backend/app/reputation/tests/: conftest.py  test_reputation.py
backend/app/search/: router.py  schemas.py
backend/app/similarity/: router.py  schemas.py
backend/app/similarity/tests/: conftest.py  test_similarity.py
backend/app/storage/: backend.py  exif.py  router.py  schemas.py
backend/app/storage/tests/: test_exif.py
backend/app/tags/: router.py  schemas.py
backend/app/tests/: test_redis.py
backend/app/votes/: router.py  schemas.py
backend/app/votes/tests/: conftest.py  test_batch_votes.py
backend/db/: bootstrap.sql  teardown.sql
frontend/: .env .example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  (+1 more)
gateway/: pyproject.toml
gateway/app/: auth.py  config.py  connections.py  handlers.py  main.py  presence.py  protocol.py  pubsub.py
gateway/app/tests/: conftest.py  test_auth.py  test_connections.py  test_presence.py  test_protocol.py  test_ws.py
(+163 files in other folders)
