[project]
name = "syntrix-backend"
version = "0.1.0"
description = "Syntrix FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "authlib>=1.3",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "passlib>=1.7",
    "itsdangerous>=2.2.0",
    "pillow>=10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "B017"]
"app/auth/oauth.py" = ["S106"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
