[project]
name = "syntrix-gateway"
version = "0.1.0"
description = "Syntrix WebSocket gateway"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.45",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "pyjwt>=2.9",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "B017"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
